修改作者名称和说明

--- a/tea_backend_theme/static/description/index.html
+++ b/tea_backend_theme/static/description/index.html
@@ -214,6 +214,20 @@ $.backstretch([
     );
 </pre>
                     </li>
+                    <li>
+                        <h3>Custom Navbar Colour</h3>
+                        Found in the <b style="background:#000;color: #fff;border-bottom: #000 1px solid;">/static/src/less/variables.less</b> file
+                        <pre class="prettyprint linenums">
+@odoo-brand-primary: #4F5A67;
+</pre>
+                    </li>
+                    <li>
+                        <h3>Custom Sidebar Colour</h3>
+                        Found in the <b style="background:#000;color: #fff;border-bottom: #000 1px solid;">/static/src/less/sidebar.less</b> file
+                        <pre class="prettyprint linenums">
+@odoo-sidebar-bg: #5E6672;
+</pre>
+                    </li>
 
                 </ul>
             </div>
