--- a/tea_backend_theme/static/description/index.html
+++ b/tea_backend_theme/static/description/index.html
@@ -9,7 +9,7 @@
             <img class="oe_picture oe_screenshot" src="drawer1.png"/>
         </div>
         <div class="oe_span6">
-            The first Odoo 10.0 community back-end sidebar and AppSwither theme
+            Odoo 10.0 community back-end sidebar and AppSwither theme
             <ul class="oe_mt32 text-left">
                 <li>
                     It's very efficient when it runs in different terminals
