--- a/tea_backend_theme/static/description/index.html
+++ b/tea_backend_theme/static/description/index.html
@@ -1,9 +1,9 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Tea Backend Theme</h2>
-        <h3 class="oe_slogan">The original name is 'Tea Backend Theme',Now change to 'Tea Community Theme'</h3>
+        <h2 class="oe_slogan" style="color:#E43A45;"><b>The original name is 'Tea Backend Theme',Now change to 'Tea Community Theme',You can click on the button below to jump</b></h2>
         <div class="oe_slogan">
-            <a class="btn btn-primary btn-lg" style="color: white" rel="nofollow" href="https://www.odoo.com/apps/themes/10.0/tea_community_theme/">
+            <a class="btn btn-danger btn-lg" style="color: white" rel="nofollow" href="https://www.odoo.com/apps/themes/10.0/tea_community_theme/">
                 <i class="fa fa-external-link"></i>Jump Tea Community Theme
             </a>
         </div>
